Installing versioning for Groundhog